@@ -1,27 +1,30 @@
 package com.example.lambdas.functionalinterfaces;
 
+import org.junit.Ignore;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static com.example.lambdas.functionalinterfaces.UsingConsumer.forEach;
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class UsingConsumerTest {
 
-    private final List<Integer> list = Arrays.asList(1, 2, 3, 4, 5);
+    private final List<Integer> list = List.of(1, 2, 3, 4, 5);
 
-    @Test
-    public void printIntegers() {
-        forEach(list, System.out::println);
-    }
-
+    @Ignore // TODO: remove!
     @Test
     public void addIntegers() {
         List<Integer> copy = new ArrayList<>();
-        forEach(list, s -> copy.add(s)); // void compatibility: we can pass in a Predicate (lambda returns boolean) as a Consumer! (Boolean) Statement expression is compatible with void.
-        forEach(copy, System.out::println);
+        forEach(list, e -> copy.add(e)); // void compatibility: we can pass in a Predicate (lambda returns boolean) as a Consumer! (Boolean) Statement expression is compatible with void.
+        assertThat(copy.size()).isEqualTo(list.size());
+    }
+
+    @Ignore // TODO: remove!
+    @Test
+    public void printIntegers() {
+        forEach(list, x -> System.out.println(x));
     }
 
 }
